# info-beamer-gdq

./: .gitignore  Cargo.toml  README.md
assets/: node.lua
assets/fonts/: dejavu
src/: ib.rs  main.rs
