[package]
name = "info-beamer-gdq"
version = "0.1.0"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2018"

[dependencies]
clap = "*"
derive_more = "*"
gethostname = "*"
itertools = "*"
kuchiki = "*"
reqwest = "*"
serde = "1"
serde_derive = "1"
serde_json = "1"
time = "*"

[dependencies.chrono]
version = "*"
features = ["serde"]
