[package]
name = "info-beamer-gdq"
version = "0.1.0"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2018"

[dependencies]
clap = "*"
derive_more = "*"
gethostname = "*"
itertools = "*"
kuchiki = "*"
serde = "1"
serde_derive = "1"
serde_json = "1"
time = "0.2"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.reqwest]
version = "0.10"
features = ["blocking", "rustls-tls"]
